Fix HTML injection vulnerability on Appointments#search
Remove old code that was used when we handled search result highlighting
in the backend

--- a/app/views/appointments/search.html.erb
+++ b/app/views/appointments/search.html.erb
@@ -52,11 +52,11 @@
     <% @results.each do |result| %>
       <% result = AppointmentSearchResultPresenter.new(result) %>
       <tr class="t-result">
-        <td class="t-id"><span class="id js-allow-highlighting">#<%= result.id.html_safe %></span></td>
+        <td class="t-id"><span class="id js-allow-highlighting">#<%= result.id %></span></td>
         <td><%= result.created_at %></td>
-        <td class="t-first-name js-allow-highlighting"><%= result.first_name.html_safe %></td>
-        <td class="js-allow-highlighting"><%= result.last_name.html_safe %></td>
-        <td class="js-allow-highlighting"><%= result.guider_name.html_safe %></td>
+        <td class="t-first-name js-allow-highlighting"><%= result.first_name %></td>
+        <td class="js-allow-highlighting"><%= result.last_name %></td>
+        <td class="js-allow-highlighting"><%= result.guider_name %></td>
         <td><%= result.date %></td>
         <td><%= result.status %></td>
         <td nowrap="true">
